--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,7 +44,11 @@ jobs:
       - name: Merge develop locally      
         # if: github.event.label.name == 'ready for QA'
         run: |
-          git merge origin/develop
+          git fetch -all
+          git checkout -b develop
+          git pull
+          git checkout ${{ github.head_ref }}
+          git merge develop
           git log
       
       - name: List Files
