--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,7 +45,7 @@ jobs:
         # if: github.event.label.name == 'ready for QA'
         run: |
           git fetch --all
-          git pull --all
+          git pull origin develop
           git rebase origin/develop
       
       - name: List Files
