--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,15 +45,12 @@ jobs:
         # if: github.event.label.name == 'ready for QA'
         run: |
           git fetch --all
-          #git pull origin develop
-          # git merge develop --allow-unrelated-histories
-          
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
           git checkout develop
           git checkout "$GITHUB_HEAD_REF"
           git merge develop --no-edit
-          git status
+          git log
       
       - name: List Files
         run: |
