--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,8 +47,8 @@ jobs:
           git fetch --all
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
-          git checkout develop
-          git checkout "$GITHUB_HEAD_REF"
+          # git checkout develop
+          # git checkout "$GITHUB_HEAD_REF"
           git merge develop --no-edit
           git log
       
