--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,11 +44,11 @@ jobs:
       - name: Merge develop locally      
         # if: github.event.label.name == 'ready for QA'
         run: |
-          git fetch --all
+          # git fetch --all
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
-          # git checkout develop
-          # git checkout "$GITHUB_HEAD_REF"
+          git checkout develop
+          git checkout "$GITHUB_HEAD_REF"
           git merge develop --no-edit
           git log
       
