--- a/.github/workflows/merging.yml
+++ b/.github/workflows/merging.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: read/write
+      pull-requests: write
     steps:
       - uses: actions/checkout@master
 
