--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Merge develop locally      
         # if: github.event.label.name == 'ready for QA'
         run: |
-          # git fetch --all
+          git fetch --all
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
           git checkout develop
@@ -85,3 +85,9 @@ jobs:
 
       - name: Show Environment
         run: echo "${{ github.event.inputs.environment }}"
+        
+      - name: remove label
+        if: always()
+        uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          labels: ready for QA
