--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -48,6 +48,9 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
           git checkout develop
+          cat .github/workflows/action.yml
+          git merge feature/test --no-edit
+          echo "----------------------------"
           git merge "$GITHUB_HEAD_REF" --no-edit
           # git checkout develop
           # git checkout "$GITHUB_HEAD_REF"
