--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,13 +47,11 @@ jobs:
           git fetch --all
           git config --global user.email "${GITHUB_ACTOR}"
           git config --global user.name "${GITHUB_ACTOR}@users.noreply.github.com"
+
+          git checkout "$GITHUB_HEAD_REF"
           git checkout develop
-          cat .github/workflows/action.yml
-          git merge feature/test --no-edit
           echo "----------------------------"
           git merge "$GITHUB_HEAD_REF" --no-edit
-          # git checkout develop
-          # git checkout "$GITHUB_HEAD_REF"
           # git merge develop --no-edit
           # git log
       
